src/lib/SudoParser.ts
// Generated from SudoParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SudoParserListener } from "./SudoParserListener";
import { SudoParserVisitor } from "./SudoParserVisitor";


export class SudoParser extends Parser {
	public static readonly NEWLINE = 1;
	public static readonly INDENT = 2;
	public static readonly DEDENT = 3;
	public static readonly ERR_DEDENT = 4;
	public static readonly L_PAREN = 5;
	public static readonly R_PAREN = 6;
	public static readonly L_CURLY = 7;
	public static readonly R_CURLY = 8;
	public static readonly L_BRACK = 9;
	public static readonly R_BRACK = 10;
	public static readonly ADD = 11;
	public static readonly SUB = 12;
	public static readonly MULT = 13;
	public static readonly DIVD = 14;
	public static readonly MOD = 15;
	public static readonly COLON = 16;
	public static readonly SEMI = 17;
	public static readonly COMMA = 18;
	public static readonly COMPARISON = 19;
	public static readonly RULE = 20;
	public static readonly APPLY = 21;
	public static readonly EXPECTS = 22;
	public static readonly FOR = 23;
	public static readonly IF = 24;
	public static readonly TO = 25;
	public static readonly FROM = 26;
	public static readonly OR = 27;
	public static readonly AND = 28;
	public static readonly GLOBAL = 29;
	public static readonly VAL = 30;
	public static readonly SUM = 31;
	public static readonly LEN = 32;
	public static readonly NUMBER = 33;
	public static readonly POS_NUMBER = 34;
	public static readonly ID = 35;
	public static readonly WHITESPACE = 36;
	public static readonly IGNORE = 37;
	public static readonly COMMENT = 38;
	public static readonly RULE_prog = 0;
	public static readonly RULE_rule_ = 1;
	public static readonly RULE_expects = 2;
	public static readonly RULE_quantifier = 3;
	public static readonly RULE_id_list = 4;
	public static readonly RULE_block = 5;
	public static readonly RULE_apply = 6;
	public static readonly RULE_apply_params = 7;
	public static readonly RULE_stmt = 8;
	public static readonly RULE_for_stmt = 9;
	public static readonly RULE_if_stmt = 10;
	public static readonly RULE_conjunction = 11;
	public static readonly RULE_disjunction = 12;
	public static readonly RULE_comparison = 13;
	public static readonly RULE_expr = 14;
	public static readonly RULE_factor = 15;
	public static readonly RULE_term = 16;
	public static readonly RULE_cell_params = 17;
	public static readonly RULE_cell_list = 18;
	public static readonly RULE_cell = 19;
	public static readonly RULE_cell_val = 20;
	public static readonly RULE_cell_sum = 21;
	public static readonly RULE_cell_len = 22;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "rule_", "expects", "quantifier", "id_list", "block", "apply", 
		"apply_params", "stmt", "for_stmt", "if_stmt", "conjunction", "disjunction", 
		"comparison", "expr", "factor", "term", "cell_params", "cell_list", "cell", 
		"cell_val", "cell_sum", "cell_len",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'%'", "':'", "';'", 
		"','", undefined, "'rule'", "'apply'", "'expects'", "'for'", "'if'", "'to'", 
		"'from'", "'or'", "'and'", undefined, "'val'", "'sum'", "'len'", undefined, 
		undefined, undefined, undefined, "' '",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "NEWLINE", "INDENT", "DEDENT", "ERR_DEDENT", "L_PAREN", "R_PAREN", 
		"L_CURLY", "R_CURLY", "L_BRACK", "R_BRACK", "ADD", "SUB", "MULT", "DIVD", 
		"MOD", "COLON", "SEMI", "COMMA", "COMPARISON", "RULE", "APPLY", "EXPECTS", 
		"FOR", "IF", "TO", "FROM", "OR", "AND", "GLOBAL", "VAL", "SUM", "LEN", 
		"NUMBER", "POS_NUMBER", "ID", "WHITESPACE", "IGNORE", "COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SudoParser._LITERAL_NAMES, SudoParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SudoParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SudoParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return SudoParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SudoParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SudoParser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SudoParser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 48;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case SudoParser.RULE:
					{
					this.state = 46;
					this.rule_();
					}
					break;
				case SudoParser.APPLY:
					{
					this.state = 47;
					this.apply();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SudoParser.RULE || _la === SudoParser.APPLY);
			this.state = 52;
			this.match(SudoParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rule_(): Rule_Context {
		let _localctx: Rule_Context = new Rule_Context(this._ctx, this.state);
		this.enterRule(_localctx, 2, SudoParser.RULE_rule_);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 54;
			this.match(SudoParser.RULE);
			this.state = 55;
			this.match(SudoParser.ID);
			this.state = 56;
			this.match(SudoParser.L_PAREN);
			this.state = 58;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SudoParser.ID) {
				{
				this.state = 57;
				this.id_list();
				}
			}

			this.state = 60;
			this.match(SudoParser.R_PAREN);
			this.state = 62;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SudoParser.EXPECTS) {
				{
				this.state = 61;
				this.expects();
				}
			}

			this.state = 64;
			this.match(SudoParser.COLON);
			this.state = 65;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expects(): ExpectsContext {
		let _localctx: ExpectsContext = new ExpectsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SudoParser.RULE_expects);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this.match(SudoParser.EXPECTS);
			this.state = 69;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SudoParser.MULT || _la === SudoParser.POS_NUMBER) {
				{
				this.state = 68;
				this.quantifier();
				}
			}

			this.state = 71;
			this.match(SudoParser.ID);
			this.state = 79;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SudoParser.COMMA) {
				{
				{
				this.state = 72;
				this.match(SudoParser.COMMA);
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SudoParser.MULT || _la === SudoParser.POS_NUMBER) {
					{
					this.state = 73;
					this.quantifier();
					}
				}

				this.state = 76;
				this.match(SudoParser.ID);
				}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public quantifier(): QuantifierContext {
		let _localctx: QuantifierContext = new QuantifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SudoParser.RULE_quantifier);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			_la = this._input.LA(1);
			if (!(_la === SudoParser.MULT || _la === SudoParser.POS_NUMBER)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public id_list(): Id_listContext {
		let _localctx: Id_listContext = new Id_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SudoParser.RULE_id_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 84;
			this.match(SudoParser.ID);
			this.state = 89;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SudoParser.COMMA) {
				{
				{
				this.state = 85;
				this.match(SudoParser.COMMA);
				this.state = 86;
				this.match(SudoParser.ID);
				}
				}
				this.state = 91;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SudoParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.match(SudoParser.NEWLINE);
			this.state = 93;
			this.match(SudoParser.INDENT);
			this.state = 96;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 96;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case SudoParser.FOR:
				case SudoParser.IF:
					{
					this.state = 94;
					this.stmt();
					}
					break;
				case SudoParser.APPLY:
					{
					this.state = 95;
					this.apply();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 98;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SudoParser.APPLY) | (1 << SudoParser.FOR) | (1 << SudoParser.IF))) !== 0));
			this.state = 100;
			this.match(SudoParser.DEDENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public apply(): ApplyContext {
		let _localctx: ApplyContext = new ApplyContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SudoParser.RULE_apply);
		let _la: number;
		try {
			this.state = 115;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 102;
				this.match(SudoParser.APPLY);
				this.state = 103;
				this.conjunction();
				this.state = 104;
				this.match(SudoParser.NEWLINE);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 106;
				this.match(SudoParser.APPLY);
				this.state = 107;
				this.match(SudoParser.ID);
				this.state = 108;
				this.apply_params();
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SudoParser.TO) {
					{
					this.state = 109;
					this.match(SudoParser.TO);
					this.state = 110;
					this.cell_params();
					}
				}

				this.state = 113;
				this.match(SudoParser.NEWLINE);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public apply_params(): Apply_paramsContext {
		let _localctx: Apply_paramsContext = new Apply_paramsContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SudoParser.RULE_apply_params);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(SudoParser.L_PAREN);
			this.state = 126;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 5)) & ~0x1F) === 0 && ((1 << (_la - 5)) & ((1 << (SudoParser.L_PAREN - 5)) | (1 << (SudoParser.VAL - 5)) | (1 << (SudoParser.SUM - 5)) | (1 << (SudoParser.LEN - 5)) | (1 << (SudoParser.NUMBER - 5)) | (1 << (SudoParser.ID - 5)))) !== 0)) {
				{
				this.state = 118;
				this.expr();
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === SudoParser.COMMA) {
					{
					{
					this.state = 119;
					this.match(SudoParser.COMMA);
					this.state = 120;
					this.expr();
					}
					}
					this.state = 125;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 128;
			this.match(SudoParser.R_PAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let _localctx: StmtContext = new StmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SudoParser.RULE_stmt);
		try {
			this.state = 132;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SudoParser.FOR:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 130;
				this.for_stmt();
				}
				break;
			case SudoParser.IF:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 131;
				this.if_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public for_stmt(): For_stmtContext {
		let _localctx: For_stmtContext = new For_stmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SudoParser.RULE_for_stmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 134;
			this.match(SudoParser.FOR);
			this.state = 135;
			this.match(SudoParser.ID);
			this.state = 136;
			this.match(SudoParser.FROM);
			this.state = 137;
			this.expr();
			this.state = 138;
			this.match(SudoParser.TO);
			this.state = 139;
			this.expr();
			this.state = 140;
			this.match(SudoParser.COLON);
			this.state = 141;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public if_stmt(): If_stmtContext {
		let _localctx: If_stmtContext = new If_stmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, SudoParser.RULE_if_stmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.match(SudoParser.IF);
			this.state = 144;
			this.conjunction();
			this.state = 145;
			this.match(SudoParser.COLON);
			this.state = 146;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conjunction(): ConjunctionContext {
		let _localctx: ConjunctionContext = new ConjunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, SudoParser.RULE_conjunction);
		try {
			this.state = 153;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 148;
				this.disjunction();
				this.state = 149;
				this.match(SudoParser.AND);
				this.state = 150;
				this.conjunction();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 152;
				this.disjunction();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public disjunction(): DisjunctionContext {
		let _localctx: DisjunctionContext = new DisjunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, SudoParser.RULE_disjunction);
		try {
			this.state = 160;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 155;
				this.comparison();
				this.state = 156;
				this.match(SudoParser.OR);
				this.state = 157;
				this.disjunction();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 159;
				this.comparison();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public comparison(): ComparisonContext {
		let _localctx: ComparisonContext = new ComparisonContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, SudoParser.RULE_comparison);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this.expr();
			this.state = 163;
			this.match(SudoParser.COMPARISON);
			this.state = 164;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let _localctx: ExprContext = new ExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, SudoParser.RULE_expr);
		let _la: number;
		try {
			this.state = 171;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 17, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 166;
				this.factor();
				this.state = 167;
				_la = this._input.LA(1);
				if (!(_la === SudoParser.ADD || _la === SudoParser.SUB)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 168;
				this.expr();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 170;
				this.factor();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public factor(): FactorContext {
		let _localctx: FactorContext = new FactorContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, SudoParser.RULE_factor);
		let _la: number;
		try {
			this.state = 178;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 173;
				this.term();
				this.state = 174;
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SudoParser.MULT) | (1 << SudoParser.DIVD) | (1 << SudoParser.MOD))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 175;
				this.factor();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 177;
				this.term();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public term(): TermContext {
		let _localctx: TermContext = new TermContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, SudoParser.RULE_term);
		try {
			this.state = 189;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SudoParser.L_PAREN:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 180;
				this.match(SudoParser.L_PAREN);
				this.state = 181;
				this.expr();
				this.state = 182;
				this.match(SudoParser.R_PAREN);
				}
				break;
			case SudoParser.VAL:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 184;
				this.cell_val();
				}
				break;
			case SudoParser.SUM:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 185;
				this.cell_sum();
				}
				break;
			case SudoParser.LEN:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 186;
				this.cell_len();
				}
				break;
			case SudoParser.ID:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 187;
				this.match(SudoParser.ID);
				}
				break;
			case SudoParser.NUMBER:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 188;
				this.match(SudoParser.NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cell_params(): Cell_paramsContext {
		let _localctx: Cell_paramsContext = new Cell_paramsContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, SudoParser.RULE_cell_params);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 193;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 20, this._ctx) ) {
			case 1:
				{
				this.state = 191;
				this.cell();
				}
				break;

			case 2:
				{
				this.state = 192;
				this.cell_list();
				}
				break;
			}
			this.state = 202;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SudoParser.COMMA) {
				{
				{
				this.state = 195;
				this.match(SudoParser.COMMA);
				this.state = 198;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 21, this._ctx) ) {
				case 1:
					{
					this.state = 196;
					this.cell();
					}
					break;

				case 2:
					{
					this.state = 197;
					this.cell_list();
					}
					break;
				}
				}
				}
				this.state = 204;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cell_list(): Cell_listContext {
		let _localctx: Cell_listContext = new Cell_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, SudoParser.RULE_cell_list);
		let _la: number;
		try {
			this.state = 217;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SudoParser.L_BRACK:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 205;
				this.match(SudoParser.L_BRACK);
				this.state = 206;
				this.cell();
				this.state = 211;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === SudoParser.COMMA) {
					{
					{
					this.state = 207;
					this.match(SudoParser.COMMA);
					this.state = 208;
					this.cell();
					}
					}
					this.state = 213;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 214;
				this.match(SudoParser.R_BRACK);
				}
				break;
			case SudoParser.ID:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 216;
				this.match(SudoParser.ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cell(): CellContext {
		let _localctx: CellContext = new CellContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, SudoParser.RULE_cell);
		try {
			this.state = 229;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 25, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 219;
				this.term();
				this.state = 220;
				this.match(SudoParser.COLON);
				this.state = 221;
				this.term();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 223;
				this.cell_list();
				this.state = 224;
				this.match(SudoParser.L_BRACK);
				this.state = 225;
				this.expr();
				this.state = 226;
				this.match(SudoParser.R_BRACK);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 228;
				this.match(SudoParser.ID);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cell_val(): Cell_valContext {
		let _localctx: Cell_valContext = new Cell_valContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, SudoParser.RULE_cell_val);
		try {
			this.state = 242;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 26, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 231;
				this.match(SudoParser.VAL);
				this.state = 232;
				this.match(SudoParser.L_PAREN);
				this.state = 233;
				this.term();
				this.state = 234;
				this.match(SudoParser.COLON);
				this.state = 235;
				this.term();
				this.state = 236;
				this.match(SudoParser.R_PAREN);
				}
				break;
